Use Java 19 with preview features